attempts to fix spill over in contact form

--- a/styles/main.css
+++ b/styles/main.css
@@ -217,6 +217,7 @@ Navbar
   color: var(--clr-primary-5);
   cursor: pointer;
   transition: var(--transition);
+  padding: 0;
 }
 .nav-toggle:hover {
   transform: scale(1.2);
@@ -551,15 +552,16 @@ Contact
 .contact-form {
   display: flex;
   max-width: 28rem;
+  flex-direction: column;
 }
 
 .form-control {
-  flex: 1 1 auto;
+  /* flex: 1 1 auto; */
   color: var(--clr-grey-5);
 }
 .form-control,
 .btn-submit {
-  padding: 0.375rem 0.75rem;
+  padding: 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
   font-weight: 300;
@@ -567,6 +569,9 @@ Contact
   background: var(--clr-white);
   text-transform: capitalize;
   border: transparent;
+  width: 100%;
+  display: block;
+  margin-left: 0;
 }
 
 .form-control::-webkit-input-placeholder {
@@ -611,8 +616,8 @@ Contact
   .contact-form {
     align-self: flex-start;
     flex: 1 1 auto;
-    max-width: 100%;
-    padding-left: 2rem;
+    max-width: 60%;
+    /* padding-left: 2rem; */
   }
 }
 
